--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,44 @@
 body {
   margin: 0;
 }
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(https://cdn.pixabay.com/photo/2017/06/16/09/55/abstract-2408490_1280.jpg);
+  height: 450px;
+  width: auto;
+  color: aliceblue;
+}
+
+main {
+  display: flex;
+  padding: 10px 0 10px 0;
+  padding: auto;
+  height:324px;
+  width: auto;
+  flex-direction: row;
+  justify-content: space-around;
+  background: rgb(35,36,0);
+  
+background: rgb(35,36,0);
+background: rgb(35,36,0);
+background: linear-gradient(90deg, rgba(35,36,0,1) 0%, rgba(120,9,121,0.8716620437237395) 11%, rgba(117,255,0,0.8212418756565126) 100%);}
+
+
+h3 {
+  flex-direction: column;
+  color: whitesmoke;
+  font-size: 30px;
+  font-weight: 800;
+  margin-block-end: 0.6em;
+}
+
+p {
+  color: #020202;
+  font-weight: 200;
+  font-size: 20px;
+  margin-block-start: 0.2em;
+  margin-block-end: 0.2em;
+}
