--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  width: auto;
 }
 
 header {
@@ -7,7 +8,7 @@ header {
   justify-content: center;
   align-items: center;
   background-image: url(https://cdn.pixabay.com/photo/2019/11/23/22/43/mars-4648224_1280.jpg);
-  height: 450px;
+  height: 324px;
   width: auto;
   font-family: 'Strait', sans-serif;
   border: 6px solid cornsilk;
@@ -23,10 +24,8 @@ main {
   width: auto;
   flex-direction: row;
   justify-content: space-around;
-  background: #B79891;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #94716B, #B79891);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #94716B, #B79891); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  background: -webkit-linear-gradient(to right, #94716B, #B79891); 
+  background: linear-gradient(to right, #94716B, #B79891); 
 }
 
 
@@ -72,7 +71,7 @@ a[href*="twitter.com/"] {
           padding-left:35px;  
         }
 h1 {
-  font-size: 240px;
+  font-size: 1600%;
   color: cornsilk;
 }        
 
@@ -122,3 +121,42 @@ a:hover {
   background-color:darkgray;
   border-radius: 5px;
 }
+
+@media (max-width: 576px) {
+  .main-container {
+    display: grid;
+    width: auto;
+    height: 100vh;
+  }
+  
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(https://cdn.pixabay.com/photo/2019/11/23/22/43/mars-4648224_1280.jpg);
+    height: 324px;
+    width: auto;
+    font-family: 'Strait', sans-serif;
+    border: 6px solid cornsilk;
+  }
+
+  main {
+    font-family: 'Strait', sans-serif;
+    display: flex;
+    margin: 0 0 0 0;
+    padding: 10px 0 10px 0;
+    height: 100%;
+    width: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: -webkit-linear-gradient(to right, #94716B, #B79891); 
+    background: linear-gradient(to right, #94716B, #B79891); 
+  }
+  
+
+}  
+
+
+
+
